@@ -1,3 +1,8 @@
+*unreleased*
+
+* Added :normalize_asset_timestamps option to deployment, defaulting to true, which allows asset timestamping to be disabled [John Trupiano]
+
+
 *2.4.0 Preview Release #1* (2.3.101) June 5, 2008 
 
 * Only make deploy:start, deploy:stop, and deploy:restart try sudo as :runner. The other sudo-enabled tasks (deploy:setup, deploy:cleanup, etc.) will now use the :admin_runner user (which by default is unset). [Jamis Buck]
